--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 </script>
 <div class="mdui-container mdui-p-t-3">
     <div class="mdui-col">
+        <div id="app">
+            <div>
         <div class="v-card">
             <v-skeleton-loader
                     :loading="loading"
@@ -149,11 +151,12 @@
             >
                     <v-img data-sizes="auto" class="lazyload" src="https://furrysp.top/file/800px-lvyunlu.webp"></v-img>
             </v-skeleton-loader>
+            </div>
                 <div class="mdui-card-content">
                     <strong>《履lǚ云录》</strong>（Elysium Above）是由《履云录》制作组（现叫Sweet Potato Studio）制作的一款AVG游戏，作者为亚罗神虎。AVG版本现已出至第三章。AVG版本现已作为废案，不再更新。 作者现在正在重新开发战棋版游戏，并预期在steam上发行。
                 </div>
                 </div>
-        </div></div>
+    </div></div>
 <div class="mdx-post-money">
     <center><button mdui-menu="{target: '#mdx-qrcode-money',align: 'center'}" mdui-tooltip="{content: '赞赏'}" class="mdui-btn mdui-btn-icon mdui-color-theme-accent mdui-ripple"><i class="mdui-list-item-icon mdui-icon fa-brands fa-weixin"></i></button>
         <div class="mdui-menu" id="mdx-qrcode-money" style="transform-origin: 50% 0px; position: fixed;"> <img alt="赞赏" src="https://s2.loli.net/2022/03/16/9exFly4Ym3nAavw.png"></div>
@@ -195,5 +198,6 @@
 <script src="../node_modules/sweetalert2/dist/sweetalert2.js" async=""></script>
 <script src="../node_modules/mdui/dist/js/mdui.min.js" async=""></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js" async=""></script>
+</div>
 </body>
 </html>
