--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
         document.documentElement.scrollTop = 0;
     }
 </script>
+<script>
+    new Vue({
+        el: '#app',
+        vuetify: new Vuetify(),
+    })
+</script>
 <footer class="mdui-typo">
     <p>Copyright © 2019 - 2022 <a style="font-weight:600" href="https://furrysp.top/" target="_blank">DragonJay</a></p>
 </footer>
