--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                             type="heading"
                     >
                     </v-skeleton-loader>
-                <h2 v-else>
+                <h3 v-else>
                     <i class="mdui-list-item-icon mdui-icon fa-duotone fa-cloud-meatball"></i> 游戏背景
-                </h2>
+                </h3>
             </div>
                 <div id="pic">
                     <v-skeleton-loader
@@ -178,8 +178,18 @@
                             type="paragraph"
                     >
                     </v-skeleton-loader>
-                    <p>分封制王国“万衍”王权渐衰，各封国间烽烟四起。东海边小国“帛”十一年前被北方大国“戮”所灭。十一年后，帛故都宛央城郊，帛太子荒朱带领援军前来，准备夺回家国。 战棋游戏《履云录》中，玩家将作为指挥官，与八位主角一起见证东海各国的兴衰。
+                    <p v-else>分封制王国“万衍”王权渐衰，各封国间烽烟四起。东海边小国“帛”十一年前被北方大国“戮”所灭。十一年后，帛故都宛央城郊，帛太子荒朱带领援军前来，准备夺回家国。 战棋游戏《履云录》中，玩家将作为指挥官，与八位主角一起见证东海各国的兴衰。
                     </p>
+                </div>
+                <div id="pic">
+                    <v-skeleton-loader
+                            v-if="loading"
+                            height="94"
+                            type="heading"
+                    >
+                    </v-skeleton-loader>
+                    <h3 v-else>游戏特色
+                    </h3>
                 </div>
                 </div>
                 </div>
