--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
             </v-skeleton-loader>
             <v-img v-else data-sizes="auto" class="lazyload" src="https://furrysp.top/usr/uploads/800px-lvyunlu.webp"></v-img>
         </div>
+            <div id="ratt">
+            <div class="text-center">
+                <v-rating
+                        v-model="rating"
+                        rating="3"
+                ></v-rating>
+            </div>
+            </div>
             <div id="pic">
                 <div class="v-card">
                     <v-skeleton-loader
@@ -160,41 +168,129 @@
                     </v-skeleton-loader>
                 <v-card-text v-else><strong>《履lǚ云录》</strong>（Elysium Above）是由《履云录》制作组（现叫Sweet Potato Studio）制作的一款AVG游戏，作者为亚罗神虎。AVG版本现已出至第三章。AVG版本现已作为废案，不再更新。 作者现在正在重新开发战棋版游戏，并预期在steam上发行。</v-card-text>
             </div>
+                </div>
                 <div id="pic">
+                    <div class="v-card">
                     <v-skeleton-loader
                             v-if="loading"
                             height="94"
                             type="heading"
                     >
                     </v-skeleton-loader>
-                <h3 v-else>
+                        <v-card-title v-else>
+                <h3>
                     <i class="mdui-list-item-icon mdui-icon fa-duotone fa-cloud-meatball"></i> 游戏背景
                 </h3>
+                        </v-card-title>
             </div>
+                    </div>
                 <div id="pic">
+                    <div class="v-card">
                     <v-skeleton-loader
                             v-if="loading"
                             height="94"
                             type="paragraph"
+                            rating="4"
                     >
                     </v-skeleton-loader>
-                    <p v-else>分封制王国“万衍”王权渐衰，各封国间烽烟四起。东海边小国“帛”十一年前被北方大国“戮”所灭。十一年后，帛故都宛央城郊，帛太子荒朱带领援军前来，准备夺回家国。 战棋游戏《履云录》中，玩家将作为指挥官，与八位主角一起见证东海各国的兴衰。
+                        <v-card-text v-else>
+                    <p>分封制王国“万衍”王权渐衰，各封国间烽烟四起。东海边小国“帛”十一年前被北方大国“戮”所灭。十一年后，帛故都宛央城郊，帛太子荒朱带领援军前来，准备夺回家国。 战棋游戏《履云录》中，玩家将作为指挥官，与八位主角一起见证东海各国的兴衰。
                     </p>
+                        </v-card-text>
                 </div>
+                    </div>
                 <div id="pic">
+                    <div class="v-card">
                     <v-skeleton-loader
                             v-if="loading"
                             height="94"
                             type="heading"
                     >
                     </v-skeleton-loader>
-                    <h3 v-else>游戏特色
+                        <v-card-title v-else>
+                    <h3><i class="mdui-list-item-icon mdui-icon fa-duotone fa-fire-flame-curved"></i> 游戏特色
                     </h3>
-                </div>
+                            </v-card-title>
+                        </div>
+                    <div id="pic">
+                        <div class="v-card">
+                            <v-skeleton-loader
+                                    v-if="loading"
+                                    height="94"
+                                    type="paragraph"
+                            >
+                            </v-skeleton-loader>
+                            <v-card-text v-else>
+                                <p>《履云录》中，玩家将扮演东海边小国——“帛”的初阶指挥官，于山雨欲来、乌云压城之时通过巧妙地排兵布阵和高超的指挥来帮助刚刚复国的帛国抵挡环伺的强敌的侵攻，一步一步探求各方势力的所求并最终做出抉择将故事引向不同的方向。<br>
+                                    游戏采用半即时的“时刻”制。在行动点数耗尽前，角色可以任意移动和使用技能；但消耗的行动点数越多，下一次行动的到来就会变得越慢。仔细注意行动次序条，集中力量歼灭敌人吧。<br>
+                                    通过不同的主动技能和被动技能的搭配，同一位队友可以以完全不同的定位出场。<br>
+                                    通过完美破关、章间休息的活动、完成支线以及各种决断招募新的队友并提升与队友的默契度以获得各种好处。<br>
+                                    在帛国境内四处活动、收集数十种宝物来强化己方角色。重要物品可能会影响结局走向哟。<br>
+                                </p>
+                            </v-card-text>
+                        </div>
+                    </div>
+                    <div id="pic">
+                        <div class="v-card">
+                            <v-skeleton-loader
+                                    v-if="loading"
+                                    height="94"
+                                    type="heading"
+                            >
+                            </v-skeleton-loader>
+                            <v-card-title v-else>
+                            <h3><i class="mdui-list-item-icon mdui-icon fa-duotone fa-eject"></i> 关于万衍世界</h3>
+                                </v-card-title>
+                        </div>
+                        </div>
+                        <div id="pic">
+                            <div class="v-card">
+                                <v-skeleton-loader
+                                        v-if="loading"
+                                        height="94"
+                                        type="paragraph"
+                                >
+                                </v-skeleton-loader>
+                                <v-card-text v-else>
+                                    <p>在万衍大陆，一个传国数千年的分封制国家“万衍国”在享用了长久的和平后还是不可避免地走到了分崩离析的边缘。宗主国——万衍威权从八百年前就逐渐衰落，各个分封国之间互相征伐，战火吞灭了不计其数的国家和生命。<br>
+                                        传统军事强国——戮，百年间不断兼并周围国家，现在已是万衍境内首屈一指的强大势力。新近成立的七国联盟则在盟主洪国的领导下与戮国对立，并极尽所能拉拢更多的国家加入联盟。两大势力的夹缝中则是游戏的主要舞台——帛国。<br>
+                                        帛国于十一年前被戮国突袭攻灭，国王奎于王宫——宛央宫中举火殉国，大王子荒朱携三王子出奔南方的洪国。此后旧帛国领便为戮国占据。十一年后，为光复国家，大王子荒朱趁占领军松懈不备领大军杀回旧帛国领地，战争和死亡的阴影再次笼罩在东海之滨。多方势力也各怀鬼胎不约而至，这一场复国战争也许只是一系列混乱的开始……
+                                    </p>
+                                </v-card-text>
+                            </div>
+                        </div>
+                    <div id="pic">
+                        <div class="v-card">
+                            <v-skeleton-loader
+                                    v-if="loading"
+                                    height="94"
+                                    type="heading"
+                            >
+                            </v-skeleton-loader>
+                            <v-card-title v-else>
+                                <h3><i class="mdui-list-item-icon mdui-icon fa-duotone fa-crown"></i> 众筹</h3>
+                            </v-card-title>
+                        </div>
+                    </div>
+                    <div id="pic">
+                        <div class="v-card">
+                            <v-skeleton-loader
+                                    v-if="loading"
+                                    height="94"
+                                    type="paragraph"
+                            >
+                            </v-skeleton-loader>
+                            <v-card-text v-else>
+                                <p>2021年2月7日，作者 <i class="fa-duotone fa-circle-dashed"></i>亚罗神虎在哔哩哔哩发布众筹宣传视频，游戏在摩点网开始众筹，三分钟达成5w的最低目标。
+                                    截止2021年3月12日众筹结束，摩点网众筹到204,511元人民币，支持人数803人，超出预期的目标金额50,000元人民币的409.02%。
+                                </p>
+                            </v-card-text>
+                        </div>
+                    </div>
                 </div>
                 </div>
         </div>
-    </div>
+</div>
 <div class="mdx-post-money">
     <center><button mdui-menu="{target: '#mdx-qrcode-money',align: 'center'}" mdui-tooltip="{content: '赞赏'}" class="mdui-btn mdui-btn-icon mdui-color-theme-accent mdui-ripple"><i class="mdui-list-item-icon mdui-icon fa-brands fa-weixin"></i></button>
         <div class="mdui-menu" id="mdx-qrcode-money" style="transform-origin: 50% 0px; position: fixed;"> <img alt="赞赏" src="https://s2.loli.net/2022/03/16/9exFly4Ym3nAavw.png"></div>
@@ -225,22 +321,31 @@
     }
 </script>
 <script>
-    new Vue({
-        el: '#pic',
-        vuetify: new Vuetify(),
-        data() {
-            return {
-                loading: false,
-                transition: 'scale-transition'
+    var one = new Vue({
+            el: '#pic',
+            vuetify: new Vuetify(),
+            dark: true,
+            data() {
+                return {
+                    loading: false,
+                    transition: 'scale-transition'
+                }
+            },
+            mounted() {
+                this.loading = true
+                setTimeout(() => {
+                    this.loading = false
+                }, 5000)
             }
-        },
-        mounted() {
-            this.loading = true
-            setTimeout(() => {
-                this.loading = false
-            }, 5000)
-        }
-    })
+        });
+
+    var two = new Vue({
+        el: '#ratt',
+        vuetify: new Vuetify(),
+        data: () => ({
+            rating: 3,
+        })
+    });
 </script>
 <footer class="mdui-typo">
     <p>Copyright © 2019 - 2022 <a style="font-weight:600" href="https://furrysp.top/" target="_blank">DragonJay</a></p>
